# researchkb-agent-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  agent_tool_contracts.md  architecture.md  mcp_compatibility.md  project_status.md  project_status.zh-CN.md  quickstart.md  schema_minimal.md  tool_matrix.md
evals/: README.md  retrieval_eval.jsonl
examples/: README.md
examples/agent-answers/: bad_troubleshooting_answer.md  good_troubleshooting_answer.md
examples/failure-case/: problem_case.json
examples/paper-memory/: demo.bib  (+4 more)
launchers/: README.md  claude-claude-openrouter.cmd  claude-claude-openrouter.ps1  claude-gpt54.cmd  claude-gpt54.ps1  claude-launcher-common.ps1
researchkb/: auto_harvest_paths.example.txt  kv_experiment_metrics_contract.md  rk-health.cmd  rk_health.py  rk_mcp_server.py  rk_query.py
scripts/: auto_standardize_runs.py  check_citations.py  cursor_mcp_smoke.py  eval_retrieval.py  import_bibtex.py  import_notes.py  import_runs.py  init_researchkb_workspace.py  public_repo_scan.py  query_demo.py  schema_check.py  seed_demo_db.py  session_brief.py  standardize_run.py  validate_examples.py
tests/: test_auto_standardize_runs.py  test_cli.py  test_eval_and_citations.py  test_import_bibtex.py  test_import_notes.py  test_import_runs.py  test_init_researchkb_workspace.py  test_public_repo_scan.py  test_rk_health.py  test_rk_mcp_server.py  test_rk_query.py  test_schema_check.py  test_session_brief.py  test_standardize_run.py
(+12 files in other folders)
