[project]
name = "researchkb-agent-memory"
version = "0.2.1"
description = "Local-first ResearchKB agent memory workflow templates and diagnostics."
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
